nuevos estados OBSERVADO y OBSERVACION ATENDIDA

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,9 @@ bot_ws/
 INICIO_RAPIDO.md
 INSTRUCCIONES_MIGRACION.md
 RESUMEN_TECNICO_CAMBIOS.md
+MEJORAS_FINALES_OBSERVACIONES.md
+CORRECCIONES_APLICADAS.md
+DOCUMENTACION_SISTEMA_OBSERVACIONES.md
+notis_estado.json
+
 
