edicion beneficiario desde modal deposito

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ MEJORAS_FINALES_OBSERVACIONES.md
 CORRECCIONES_APLICADAS.md
 DOCUMENTACION_SISTEMA_OBSERVACIONES.md
 notis_estado.json
-
-
+uploads/
+IMPLEMENTACION_EDICION_BENEFICIARIO.md
+api/notis_estado.json
